# test_poetry

./: pyproject.toml
auth_package/libs/auth_client/: api_lib.py  auth_client_lib.py
auth_package/libs/auth_client/model/: session.py
tests/: test_auth_package.py
