[tool.poetry]
name = "auth_package"
version = "0.1.0"
description = ""
authors = ["InnerTaste <sugantric@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
Jinja2 = "^2.11.2"
pymongo = "^3.11.2"
msal = "^1.8.0"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
