[tool.poetry]
name = "auth_package"
version = "0.1.0"
description = ""
authors = ["InnerTaste <sugantric@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.61.0"
uvicorn = "^0.12.1"
Jinja2 = "^2.11.2"
pymongo = "^3.11.1"
msal = "^1.6.0"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
